<resources>
    <string name="app_name">Мобильный терапевт</string>
    <string name="callList">Список вызовов</string>
    <string name="medCall">Вызов</string>
    <string name="auth">Авторизация</string>
    <string name="settings">Настройки</string>
    <string name="overview">Обзор</string>
    <string name="document">Документ</string>
    <string name="treatment">Лечение</string>
    <string name="patientInspected">Пациент осмотрен</string>
    <string name="patientControl">Управление</string>
    <string name="openDocFolder">Папка с документами</string>
    <string name="reason">Повод обращения</string>
    <string name="complaints">Жалобы</string>
    <string name="recommendations">Рекомендации</string>
    <string name="anamnesis">Анамнез</string>
    <string name="allergicAnamnesis">Аллергологический анамнез</string>
    <string name="objectively">Объективно</string>
    <string name="generalState">Общее состояние</string>
    <string-array name="stateTypes">
        <item>не выбрано</item>
        <item>удовлетворительное</item>
        <item>средней тяжести</item>
        <item>тяжелое</item>
    </string-array>
    <string name="nutrition">Питание</string>
    <string-array name="nutritionTypes">
        <item>не выбрано</item>
        <item>нормальное</item>
        <item>пониженное</item>
        <item>повышенное</item>
    </string-array>
    <string name="bodyBuild">Телосложение</string>
    <string-array name="bodyBuildTypes">
        <item>не выбрано</item>
        <item>нормостенический</item>
        <item>астенический</item>
        <item>гиперстенический</item>
    </string-array>
    <string name="skin">Кожные покровы</string>
    <string name="nodes">Л/узлы</string>
    <string-array name="nodesTypes">
        <item>не выбрано</item>
        <item>не увеличены</item>
        <item>увеличены</item>
    </string-array>
    <string name="glands">Щ/железа</string>
    <string-array name="glandsTypes">
        <item>не выбрано</item>
        <item>не увеличена</item>
        <item>увеличена</item>
    </string-array>
    <string name="temperature">Температура</string>
    <string name="pharynx">Зев</string>
    <string name="respiratoryRate">ЧДД</string>
    <string name="breathing">Дыхание</string>
    <string-array name="breathingTypes">
        <item>не выбрано</item>
        <item>везикульярное</item>
        <item>жесткое</item>
        <item>ослабленное</item>
    </string-array>
    <string name="wheezing">Хрипы</string>
    <string-array name="wheezingTypes">
        <item>не выбрано</item>
        <item>отсутствуют</item>
        <item>сухие</item>
        <item>влажные</item>
    </string-array>
    <string name="heartTones">Тоны сердца</string>
    <string-array name="heartTonesTypes">
        <item>не выбрано</item>
        <item>ритмичные</item>
        <item>ясные</item>
        <item>приглушены</item>
    </string-array>
    <string name="arterialPressure">Артериальное давление</string>
    <string name="arterialPressureMeasurement">мм рт. ст.</string>
    <string name="pulse">Пульс</string>
    <string name="pulseMeasurement">уд в мин</string>
    <string name="abdomen">Живот</string>
    <string-array name="abdomenTypes">
        <item>не выбрано</item>
        <item>безболезненный</item>
        <item>болезненный</item>
        <item>мягкий</item>
        <item>напряжен</item>
    </string-array>
    <string name="liver">Печень</string>
    <string-array name="liverTypes">
        <item>не выбрано</item>
        <item>не увеличена</item>
        <item>увеличена</item>
    </string-array>
    <string name="edema">Отеки</string>
    <string-array name="edemaTypes">
        <item>не выбрано</item>
        <item>есть</item>
        <item>нет</item>
    </string-array>
    <string name="pensioner">Неработающий</string>
    <string name="sick">Больничный</string>
    <string name="surveys">Обследования</string>
    <string name="medicationTherapy">Медикаментозная терапия</string>
    <string name="regularUpdates">Регулярные\nобновления</string>
    <string name="infoAboutPatient">Информация о пациенте</string>
    <string name="diagnosis">Диагноз</string>
    <string name="maps">Карты</string>
    <string name="treatmentPlan">План лечения</string>
    <string name="sortByNearest">Сортировать по\nместоположению</string>
    <string name="listOfPatients">@string/callList</string>
    <string name="updateList">Обновить список</string>
    <string name="card">Карта</string>
    <string name="sendAll">Отправить все</string>
    <string name="miscellaneous">Разное</string>
    <string name="interfaceName">Интерфейс</string>
    <string name="biometricAuth">Биометрическая авторизация</string>
    <string name="extraInfo">Подробности</string>
    <string-array name="extraInfoFieldNames">
        <item>Дата создания</item>
        <item></item>
    </string-array>
    <string name="registry">Журнал</string>
    <string name="others">Разное</string>
    <string name="aboutMenu">О нас</string>
    <string name="helpMenu">Помощь</string>
    <string name="account">Учетная запись</string>
    <string name="logout">Выйти</string>
    <string name="handbookMKB10">Справочник МКБ10</string>
    <string name="inspection">Общий осмотр</string>
    <string name="inspectionShort">Осмотр</string>
    <string name="anonCall">Анонимность звонков</string>
    <string name="test">Для разработчиков</string>
    <string name="patientsComplaints">Жалобы со слов пациента</string>
    <string name="stateOfSkin">Состояние кожи</string>
    <string name="anonCallDesc">Оператор может взимать дополнительную плату за услугу</string>
    <string name="writeResultOfInspection">Напишите результаты осмотра…</string>
    <string name="writeConclusion">Напишите заключение…</string>
    <string name="treatmentHint">Напишите…</string>
    <string name="authHint">Авторизуйтесь чтобы начать работу</string>
    <string name="writingPatientsInspection">Заполнение общего осмотра пациента</string>
    <string name="beforeExitSaveData">Перед закрытием нажмите «Сохранить изменения» если не хотите потерять данные</string>
    <string name="dataWontSave">Данные не сохранятся!</string>
    <string name="dataWillDeleteForever">Данные навсегда удалятся</string>
    <string name="commentary">Комментарий…</string>
    <string name="requestWritePermission">Разрешите доступ к хранилищу, чтобы сохранять документы</string>
    <string name="testAddPatient">Чтобы добавить пациента введите его имя, остальные данные будут введены поумолчанию</string>
    <string name="testPatientDelete">Для удаления пациента, введите его идентификатор</string>
    <string name="open">Открыть</string>
    <string name="actionAuth">Авторизоваться</string>
    <string name="saveChanges">Отправить</string>
    <string name="documentSending">Документ отправляется</string>
    <string name="pdfPreview">Сохранить\nдокумент</string>
    <string name="useTempFromInspection">Использовать\nшаблон осмотра</string>
    <string name="exit">Нажмите еще раз для выхода</string>
    <string name="allow">Разрешите доступ для сохранения файла и работы карт</string>
    <string name="ok">Ок</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="downloadRecommendations">Скачать рекомендации по лечению</string>
    <string name="deleteRegistry">Удалить запись?</string>
    <string name="cancel">Отмена</string>
    <string name="delete">Удалить</string>
    <string name="moveToEditProtocol">Перейти к редактированию протокола</string>
    <string name="addDiagnosis">Добавить диагноз</string>
    <string name="saveDocument">Сохранить документ</string>
    <string name="selectExtraField">Выберите тип дополнительного поля</string>
    <string name="darkMode">Ночной режим</string>
    <string name="managerName">Менеджер списка</string>
    <string name="updateWhen">Обновлять</string>
    <string name="listNotUpdated">Лист не обновлялся</string>
    <string name="downloading">Загрузка…</string>
    <string name="noName">Безымянный</string>
    <string name="age">лет</string>
    <string name="inspected">Осмотрен</string>
    <string name="inspectionPreset">Значение 1:\nЗначение 2:</string>
    <string name="text">Текст</string>
    <string name="registryDeleted">Осмотр будет удален</string>
    <string name="successfulAuth">Успешная авторизация</string>
    <string name="updated">Обновлен %s</string>
    <string name="receivingDataOn">Обновление данных включено</string>
    <string name="moveToSettings">Нажмите, чтобы отключить обновления</string>
    <string name="protocolTempsCleared">Все протоколы сброшены</string>
    <string name="tempUsed">Шаблон использован</string>
    <string name="textCopied">Текст скопирован</string>
    <string name="undoDeleting">Отменить</string>
    <string name="exitFromEditing">Прекратить редактирование?</string>
    <string name="pdfCreated">Файл создан</string>
    <string name="pdfGenerationFailed">Ошибка генерации PDF документа</string>
    <string name="diagnoseDeleted">Диагноз удален</string>
    <string name="diagnosisAlreadyAdded">Этот диагноз уже записан</string>
    <string name="docMovedTo">Документ перемещен в раздел</string>
    <string name="docMovedToJournal">Документ перемещен в раздел «Журнал»</string>
    <string name="docsSent">Документы отправлены на сервер</string>
    <string name="documentSaved">Документ сохранен в папке «Документы»</string>
    <string name="fileSaveByPath">Файл сохранен по пути: </string>
    <string name="errorOfDocumentGeneration">Ошибка генерации документа</string>
    <string name="replaceFile">Заменить файл?</string>
    <string name="listEmpty">Список пуст</string>
    <string name="fileAlreadyExists">Файл уже существует</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="diagnose">Диагноз: МКБ (Международная классификация болезней)</string>
    <string name="search">Поиск…</string>
    <string name="noInternetConnection">Отсутствует интернет соединение</string>
    <string name="userNotFound">Пользователь не найден</string>
    <string name="unknownError">Возникла неизвестная ошибка</string>
    <string name="serverDoesNotRespond">Сервер не отвечает</string>
    <string name="emptyDbError">База данных пациентов пуста!</string>
    <string name="emptyServerProtocols">На сервере отсутсвтуют протоколы</string>
    <string name="serverError">Ошибка сервера</string>
    <string name="socketTimeOut">Превышено время ожидания</string>
    <string name="diagnosesIsEmpty">Не заполнен диагноз</string>
    <string name="emptyCategory">Пустая категория</string>
    <string name="callTime">Время вызова</string>
    <string name="dateOfMedCardEdit">Дата заполнения мед. карты</string>
    <string name="fullName">ФИО</string>
    <string name="sex">Пол</string>
    <string name="dateOfBirth">Дата рождения</string>
    <string name="residence">Место вызова</string>
    <string name="bcc">Код категории льготы</string>
    <string name="snils">СНИЛС</string>
    <string name="polis">ПОЛИС</string>
    <string name="medOrg">Медицинская страховая организация</string>
    <string name="call">Звонок</string>
    <string name="createDate">Дата посещения</string>
    <string name="patientFullName">ФИО пациента</string>
    <string-array name="fieldType">
        <item>Общий осмотр</item>
        <item>Рекомендации</item>
    </string-array>
    <string-array name="fieldHint">
        <item>Общий осмотр…</item>
        <item>Рекоменции…</item>
    </string-array>
    <string-array name="modes">
        <item>При входе в приложение</item>
        <item>Каждый час</item>
        <item>Вручную</item>
    </string-array>
    <string-array name="extraFields">
        <item>Температура</item>
        <item>Давление</item>
        <item>Травмы</item>
        <item>Боли</item>
        <item>Лечение дома</item>
    </string-array>
    <string name="keyCallId">CALL_ID</string>
</resources>