<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigationView">

    <item android:id="@+id/registry"
        android:icon="@drawable/ic_inspections"
        android:title="@string/registry" />

    <item android:id="@+id/handbookMKB"
        android:icon="@drawable/ic_book"
        android:title="@string/handbookMKB10" />

    <item android:title="@string/others">

        <menu>

            <item android:id="@+id/settingsMenu"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings" />

            <item android:id="@+id/about"
                android:icon="@drawable/ic_info"
                android:title="@string/aboutMenu" />

            <item android:id="@+id/help"
                android:icon="@drawable/ic_help"
                android:title="@string/helpMenu" />
        </menu>
    </item>

    <item android:title="@string/account">
        <menu>
            <item android:id="@+id/logoutMenu"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout" />
        </menu>
    </item>
</menu>