<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.RegistrationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:elevation="@dimen/cardElevation"
            android:orientation="vertical"
            android:padding="@dimen/displayPadding">

            <TextView
                android:id="@+id/menuSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/clear_sans_bold"
                android:text="@string/auth"
                android:textColor="@color/darkGrayText"
                android:textSize="@dimen/titleFont"
                android:textStyle="normal"
                app:layout_constraintBottom_toTopOf="@+id/lineSignIn" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/clear_sans_medium"
            android:gravity="center_horizontal"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/authHint"
            android:textAlignment="center"
            android:textColor="@color/lightGrayText"
            android:textSize="@dimen/hintFont" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical"
            android:paddingLeft="50dp"
            android:paddingRight="50dp">

            <EditText
                android:id="@+id/emailField"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/edit_text"
                android:drawablePadding="6dp"
                android:ems="10"
                android:fontFamily="@font/clear_sans_bold"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingStart="8dp"
                android:textColor="@color/darkGrayText"
                android:textColorHighlight="@color/highlight"
                android:textColorHint="@color/lightGrayText"
                app:drawableStartCompat="@drawable/email_ic_selector"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lineSignIn" />

            <EditText
                android:id="@+id/passwordField"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/edit_text"
                android:drawablePadding="6dp"
                android:ems="10"
                android:fontFamily="@font/clear_sans_bold"
                android:hint="@string/password"
                android:inputType="textWebPassword"
                android:paddingStart="8dp"
                android:textColor="@color/darkGrayText"
                android:textColorHighlight="@color/highlight"
                android:textColorHint="@color/lightGrayText"
                app:drawableStartCompat="@drawable/pincode_ic_selector"
                app:layout_constraintStart_toStartOf="@+id/emailField"
                app:layout_constraintTop_toBottomOf="@+id/emailField" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/authLoading"
                style="@style/Widget.AppCompat.ProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="@+id/passwordField"
                app:layout_constraintStart_toStartOf="@+id/passwordField"
                app:layout_constraintTop_toBottomOf="@+id/passwordField" />

            <TextView
                android:id="@+id/error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="60dp"
                android:fontFamily="@font/clear_sans_medium"
                android:text="Error Type"
                android:textColor="@color/error"
                android:textSize="@dimen/mediumFont"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="@+id/authLoading"
                app:layout_constraintStart_toStartOf="@+id/authLoading"
                app:layout_constraintTop_toBottomOf="@+id/authLoading" />

            <Button
                android:id="@+id/signInButton"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:fontFamily="@font/clear_sans_bold"
                android:text="@string/actionAuth"
                android:textAllCaps="false"
                android:textColor="@color/button_text_color"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/copyright"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/copyright"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/logoImage"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="4dp"
                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/copyrightText"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:fontFamily="@font/clear_sans_medium"
                android:text="@string/app_name"
                android:textColor="@color/lightGrayText" />
        </LinearLayout>

    </LinearLayout>
</layout>