<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.test.TestFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">


        <TextView
            android:id="@+id/testTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/patientControl"
            android:textAppearance="@style/titleText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/testBack"
            android:layout_width="@dimen/minDp"
            android:layout_height="@dimen/minDp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="?android:attr/actionBarItemBackground"
            android:padding="8dp"
            android:src="@drawable/ic_back_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/darkGrayText" />

        <EditText
            android:id="@+id/testPatientName"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="128dp"
            android:ems="10"
            android:fontFamily="@font/clear_sans_regular"
            android:hint="Имя пациента"
            android:inputType="textPersonName"
            android:textColor="@color/darkGrayText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/testTitle" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/clear_sans_medium"
            android:text="@string/testAddPatient"
            android:textColor="@color/lightGrayText"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/testPatientName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/testAdd"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/add_button"
            android:text="Добавить пациента"
            app:layout_constraintEnd_toEndOf="@+id/testPatientName"
            app:layout_constraintStart_toStartOf="@+id/testPatientName"
            app:layout_constraintTop_toBottomOf="@+id/testPatientName" />

        <EditText
            android:id="@+id/testPatientDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="128dp"
            android:ems="10"
            android:fontFamily="@font/clear_sans_regular"
            android:hint="Идентификатор пациента"
            android:inputType="numberDecimal"
            android:textColor="@color/darkGrayText"
            app:layout_constraintEnd_toEndOf="@+id/testAdd"
            app:layout_constraintStart_toStartOf="@+id/testAdd"
            app:layout_constraintTop_toBottomOf="@+id/testAdd" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/clear_sans_medium"
            android:text="@string/testPatientDelete"
            android:textColor="@color/lightGrayText"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/testPatientDelete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/testDelete"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/add_button"
            android:text="Удалить пациента"
            app:layout_constraintEnd_toEndOf="@+id/testPatientDelete"
            app:layout_constraintStart_toStartOf="@+id/testPatientDelete"
            app:layout_constraintTop_toBottomOf="@+id/testPatientDelete" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>